Bug 1516761 - Only use OS_RGBA for the first frame of animated GIFs. r=tnikkel a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D58821

--HG--
extra : source : 56970f0e694286f165b64d9c2d7c5a28fa6ce2a2